updated app to working demo version ready for deployment to aws

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-config.py
 sendgmail.py
 *.pyc
 *.swp
@@ -6,3 +5,10 @@ test.py
 textPhone.py
 send.py
 virt
+.ebignore
+.env
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
