--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
-myApp
-Flask
-Flask-Bcrypt
-Flask-Login
-Flask-Mail
-Flask-PyMongo
-Flask-WTF
-Jinja2
-WTForms
-Werkzeug
-plivo
-pymongo
-python-bcrypt
-markupsafe
-itsdangerous
-requests
+certifi==2019.11.28
+chardet==3.0.4
+Click==7.0
+decorator==4.4.1
+dnspython==1.16.0
+Flask==1.1.1
+Flask-WTF==0.14.2
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.3
+lxml==4.4.2
+MarkupSafe==1.1.1
+plivo==4.3.6
+pymongo==3.10.0
+requests==2.22.0
+six==1.13.0
+urllib3==1.25.7
+Werkzeug==0.16.0
+WTForms==2.2.1
