--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
@@ -19,8 +20,6 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-
-  "proxy": "http://localhost:5000",
   "browserslist": {
     "production": [
       ">0.2%",
