create user endpoint started

--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "dependencies": {},
   "devDependencies": {
+    "serverless-package-external": "^1.1.2",
     "serverless-python-requirements": "^5.0.1"
   }
 }
