--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,4 @@ virt
 mongo_import.py
 __pycache__
 
-# Elastic Beanstalk Files
-.elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
+node_modules
