--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,15 @@ Click==7.0
 decorator==4.4.1
 dnspython==1.16.0
 Flask==1.1.1
+Flask-PyMongo==2.3.0
 Flask-WTF==0.14.2
+gunicorn==20.0.4
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.3
 lxml==4.4.2
 MarkupSafe==1.1.1
+phonenumbers==8.11.1
 plivo==4.3.6
 pymongo==3.10.0
 requests==2.22.0
@@ -17,5 +20,3 @@ six==1.13.0
 urllib3==1.25.7
 Werkzeug==0.16.0
 WTForms==2.2.1
-phonenumbers==8.11.1
-gunicorn==20.0.4
