--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,9 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-phone-input-2": "^2.12.1",
+    "react-phone-number-input": "^3.0.21",
+    "react-scripts": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
